fix: z-index, again
Turns out the reason for drawing the background so weirdly was the stats
viewer: The world map was supposed to go behind the squares, while
everything else is supposed to go in front of it.

So we're back to drawing the background onto an actual div element, so
that the stats viewer world map can be layered behind it. In fact, we're
layering _everything_ behind it, but only show the background if the
screen is wide enough for it to no overlay anything. Let's hope that
goes well.

--- a/pointercrate-core-pages/static/css/ui.css
+++ b/pointercrate-core-pages/static/css/ui.css
@@ -438,13 +438,20 @@ textarea:invalid {
   margin-left: 10px;
 }
 
-@media (min-width: 768px) {
-  body {
+@media (min-width:1440px) {
+  #bg {
     background-image: url(/static/images/squares3.png);
     background-size: cover;
     background-repeat: repeat-y;
+    position: fixed;
+    top: 0;
+    pointer-events: none;
+    height: 100vh;
+    width: 100vw;
   }
+}
 
+@media (min-width: 768px) {
   .viewer .paginator {
     max-width: 35%;
   }
