--- a/pointercrate-demonlist-pages/static/css/statsviewer.css
+++ b/pointercrate-demonlist-pages/static/css/statsviewer.css
@@ -1,6 +1,5 @@
 #world-map-wrapper {
     overflow: hidden;
-    z-index: -2;
     position: fixed;
     top: 0;
     right: 0;
